--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ header{
     header {
         display: block;
         z-index: 2;
-    
+        height: 90px; 
     }
     
     .logos-home {
